# secstructartist

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  secstructartist.py  setup.py
_dev/: README.md
_dev/notebooks/: artist_definition.ipynb
examples/: Q9X078_rmsf.csv  artist_definition.ipynb  example_artistdef.ipynb  example_plots.ipynb  examples.ipynb
secstructartist/: __init__.py
secstructartist/artists/: __init__.py  abc.py  helix.py  loop.py
secstructartist/interface/: artist.py  artist_dssp.py
secstructartist/utils/: utils.py
src/secstructartist/: __init__.py  axes.py  constants.py  drawstyle.py  elementartist.py  main.py  secstructartist.py  typing_.py  utils.py
src/secstructartist/artist/: funcs.py
src/secstructartist/artists/: __init__.py  drawstyle.py  element.py  secstruct.py
src/secstructartist/config/: _helpers.py  configwriter.py  default.yaml  dssp.yaml  pymol.yaml  pymol2.yaml  pymol3.yaml  simple.yaml  stride.yaml
src/secstructartist/core/: drawstyle.py  elementartist.py  secstructartist.py  utils.py
src/secstructartist/io/: __init__.py  _helpers.py  configreader.py  configwriter.py
src/secstructartist/primitives/: __init__.py  arrow.py  base.py  line.py
src/secstructartist/styles/: __init__.py  sheet.py
tests/: test_axes.py  test_drawstyle.py  test_elementartist.py  test_main.py  test_secstructartist.py
tests/config/: test_configreader.py  test_configwriter.py  test_default_configs.py  test_helpers.py
tests/primitives/: test_arrow.py  test_base.py  test_helix.py  test_line.py
(+6 files in other folders)
